--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^14.6.2
+  intl: ^0.20.2
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^6.0.6
+  qr_code_scanner: ^1.0.1
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.5.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
