--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.2
   dio: ^5.8.0+1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
